@@ -1,9 +1,12 @@
+group = 'xyz.ivyxjc'
+version = '0.0.1-SNAPSHOT'
 
 buildscript {
     ext {
         springBootVersion = '2.0.0.RELEASE'
     }
     repositories {
+        mavenLocal()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     }
     dependencies {
@@ -11,13 +14,7 @@ buildscript {
     }
 }
 
-//compileJava{
-//    doFirst(
-//        options.compilerArgs = [
-//            '--add-modules', 'java.xml.bind'],
-//        classpath = files()
-//    )
-//}
+apply plugin: 'org.springframework.boot'
 
 task dockerBuild(type:Exec,dependsOn:build){
     workingDir './'
@@ -26,27 +23,17 @@ task dockerBuild(type:Exec,dependsOn:build){
     commandLine "PowerShell", "docker build -t springboot ."
 }
 
-apply plugin: 'org.springframework.boot'
-
-apply plugin: 'java'
-apply plugin: 'kotlin'
-
-
-group = 'xyz.ivyxjc'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
-
 repositories {
     mavenLocal()
     maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
 }
 
 dependencies {
-    testCompile('org.springframework.boot:spring-boot-starter-test:2.0.0.RELEASE')
+    testCompile("org.springframework.boot:spring-boot-starter-test:$springboot_version")
 
-    compile('org.springframework.boot:spring-boot-starter-web:2.0.0.RELEASE')
+    compile("org.springframework.boot:spring-boot-starter-web:$springboot_version")
 
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '2.0.0.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version:springboot_version
 
     compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.1'
 
